scenes our technology fixing collapsed background color on the table

--- a/src/scenes/ourTechnology/ourTechnology.css
+++ b/src/scenes/ourTechnology/ourTechnology.css
@@ -61,13 +61,13 @@
   gap: 0.5rem;
 }
 
+.technology-text td{
+  background-color: rgba(240, 248, 255, 0) !important;
+}
+
 .our-technology-text tr {
   justify-content: center;
   height: 2rem;
-}
-
-table {
-  background-color: #1c1c1c00;
 }
 
 @media (max-width: 1024px) {
